--- a/infra/cluster-api/README.org
+++ b/infra/cluster-api/README.org
@@ -36,7 +36,7 @@ kubectl -n cluster-api-provider-packet-system logs -l control-plane=controller-m
 ** Create configuration for the Packet machine
 
 #+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
-export CLUSTER_NAME="pairsharingio"
+export CLUSTER_NAME="sharingiopair"
 export PROJECT_ID=7a44b778-41d2-49fa-9c92-99148516c600
 export PACKET_PROJECT_ID=$PROJECT_ID
 export FACILITY=sjc1
@@ -62,6 +62,11 @@ kubectl create ns sharingio
 kubectl -n sharingio apply -f cluster-packet-${CLUSTER_NAME}.yaml
 #+end_src
 
+** Get machines and packetmachines
+#+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
+kubectl -n sharingio get machines,packetmachines
+#+end_src
+
 ** Get the Kubeconfig
 #+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
 kubectl -n sharingio get secrets ${CLUSTER_NAME}-kubeconfig -o=jsonpath='{.data.value}' | base64 -d > ~/.kube/packet-sharingio
@@ -77,6 +82,11 @@ ssh root@$(kubectl -n sharingio get cluster sharingio -o=jsonpath='{.spec.contro
 #+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
 export KUBECONFIG="$HOME/.kube/packet-sharingio"
 #+end_src
+
+#+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
+kubectl get pods -A
+#+end_src
+
 ** CNI
 *** Prepare
 #+begin_src shell :results silent
@@ -131,34 +141,14 @@ kubectl -n helm-operator apply \
   -f https://github.com/sharingio/.sharing.io/raw/main/cluster-api/manifests/helm-operator.yaml
 #+end_src
 ** MetalLB
-*** Configure
-#+begin_src yaml :tangle ./metallb-config.yaml
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  namespace: metallb-system
-  name: config
-data:
-  config: |
-    address-pools:
-      - name: default
-        protocol: layer2
-        addresses:
-          - ${KUBERNETES_CONTROLPLANE_ENDPOINT}/32
-#+end_src
-
 *** Install
 #+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
+kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/v0.10.2/manifests/namespace.yaml
 kubectl get configmap kube-proxy -n kube-system -o yaml | sed -e "s/strictARP: false/strictARP: true/" | kubectl apply -f - -n kube-system
-kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/v0.9.3/manifests/namespace.yaml
-
-kubectl create secret generic -n metallb-system memberlist --from-literal=secretkey="$(openssl rand -base64 128)"
-
-export KUBERNETES_CONTROLPLANE_ENDPOINT=$(kubectl config view -o=jsonpath='{.clusters[0].cluster.server}'| grep -oE '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')
-envsubst < ./metallb-config.yaml | kubectl apply -f -
-
-kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/v0.9.3/manifests/metallb.yaml;
+kubectl -n metallb-system create secret generic memberlist --from-literal=secretkey="$(openssl rand -base64 128)"
+kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/v0.10.2/manifests/metallb.yaml
 #+end_src
+
 ** nginx-ingress
 *** Configure
 #+begin_src yaml :tangle ./nginx-ingress.yaml
@@ -477,7 +467,7 @@ spec:
 #+end_src
 
 *** Install
-#+begin_src shell :results silent
+#+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
 kubectl apply -f ./metrics-server.yaml
 #+end_src
 ** Kube-Prometheus
@@ -528,7 +518,7 @@ spec:
 #+end_src
 
 *** Install
-#+begin_src shell :results silent
+#+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
 kubectl apply -f ./kube-prometheus.yaml
 #+end_src
 
@@ -591,7 +581,7 @@ spec:
 #+end_src
 
 *** Install
-#+begin_src shell
+#+begin_src tmate :window cluster-api-apply :session packet-cluster-api :noweb yes
 export LOAD_BALANCER_IP=$(kubectl -n nginx-ingress get svc nginx-ingress-ingress-nginx-controller -o=jsonpath='{.status.loadBalancer.ingress[0].ip}')
 envsubst < ./dnsendpoint-sharingio.yaml | kubectl apply -f -
 #+end_src
