Add APP_SLEEP_TIME docs

--- a/apps/reconciler/README.org
+++ b/apps/reconciler/README.org
@@ -16,6 +16,7 @@ There are a few different things that are reconciled, these are:
 By listing the /clusters.cluster.x-k8s.io/ resources, with cluster that's managed by Pair in the given namespace, call the endpoints to reconcile the instance.
 
 * Env vars
-| Name                           | Default                                      | Description                              |
-|--------------------------------+----------------------------------------------+------------------------------------------|
-| ~APP_CLUSTER_API_MANAGER_HOST~ | http://sharingio-pair-clusterapimanager:8080 | The HTTP address for cluster-api-manager |
+| Name                           | Default                                      | Description                                                               |
+|--------------------------------+----------------------------------------------+---------------------------------------------------------------------------|
+| ~APP_CLUSTER_API_MANAGER_HOST~ | http://sharingio-pair-clusterapimanager:8080 | The HTTP address for cluster-api-manager                                  |
+| ~APP_SLEEP_TIME~               | 60                                           | The amount of seconds to wait after all clusters have been looped through |
